--- a/public/styles/css/style.css
+++ b/public/styles/css/style.css
@@ -188,12 +188,12 @@ body {
 .rain-container .rain-2 {
   position: absolute;
   z-index: 1;
-  width: 10px;
-  height: 600px;
-  left: 49%;
-  top: 36.9%;
-  background-color: #87ceeb;
-  transform: translate(0px, 0px) skew(-3deg, 0deg);
+  width: 40px;
+  height: 80px;
+  left: 25%;
+  top: 550px;
+  background-color: skyblue;
+  transform: translate(0px, 0px) skew(-26deg, 0deg);
 }
 .rain-container .project__info {
   display: flex;
@@ -385,4 +385,96 @@ body {
 }
 .block__ad .ad__button_for_register .button_for_register__button .button__link:hover {
   color: black;
+}
+
+.project__about_clients {
+  display: flex;
+  margin-top: 103px;
+  justify-content: center;
+}
+.project__about_clients .about__clients_text {
+  max-width: 50%;
+}
+.project__about_clients .about__clients_text .about__clients_head {
+  text-align: center;
+  font-size: 36px !important;
+  font-family: "SW_font", sans-serif;
+  font-size: 24px;
+  text-transform: uppercase;
+  color: #c0b534;
+}
+.project__about_clients ol {
+  font-family: "SW_font", sans-serif;
+  font-size: 20px;
+  color: white;
+  margin-left: 24px;
+}
+.project__about_clients .about__clients_list .about__clients_elements .about__clients_elements_content {
+  font-family: "SW_font", sans-serif;
+  font-size: 20px;
+  color: white;
+  margin-left: 24px;
+}
+.project__about_clients .about__clients_gif {
+  margin-left: 60px;
+  width: 800px;
+  height: 600px;
+}
+.project__about_clients iframe {
+  width: 100%;
+  height: 600px;
+  border-radius: 100px;
+  box-shadow: 7px 7px 2.5px 10px rgba(0, 0, 0, 0.25);
+}
+
+.invite__gaming {
+  margin-top: 150px;
+  display: flex;
+  align-items: center;
+  margin-left: 150px;
+  margin-bottom: 150px;
+  gap: 228px;
+}
+.invite__gaming .gaming__text {
+  max-width: 900px;
+}
+.invite__gaming .gaming__text .gaming__text_header {
+  font-size: 36px !important;
+  text-align: center;
+  font-family: "SW_font", sans-serif;
+  font-size: 24px;
+  text-transform: uppercase;
+  color: #c0b534;
+}
+.invite__gaming .gaming__text .gaming__text_menu {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+.invite__gaming .gaming__text_list .gaming__text_elements {
+  font-family: "SW_font", sans-serif;
+  font-size: 20px;
+  color: white;
+  margin-left: 36px;
+  margin: 0;
+}
+.invite__gaming .gaming__button_link {
+  font-family: "SW_font", sans-serif;
+  font-size: 20px;
+  color: white;
+  margin-left: 0;
+  font-size: 50px;
+  display: flex;
+  align-items: center;
+  color: black;
+  justify-content: center;
+  border-radius: 100px;
+  background-color: white;
+  width: 375px;
+  height: 126px;
+}
+.invite__gaming .gaming__button_link:hover {
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
