--- a/public/styles/scss/style.scss
+++ b/public/styles/scss/style.scss
@@ -151,15 +151,15 @@ body {
   }
   .rain-2 {
     @include rainDisplayAndPosition(
-      10px,
-      600px,
-      49%,
-      36.9%,
-      #87ceeb,
+      40px,
+      80px,
+      25%,
+      550px,
+      skyblue,
       1,
       absolute
     );
-    transform: translate(0px, 0px) skew(-3deg, 0deg);
+    transform: translate(0px, 0px) skew(-26deg, 0deg);
   }
   .rain-3 {
   }
@@ -290,5 +290,87 @@ body {
         font-size: 30px;
       }
     }
+  }
+}
+.project__about_clients {
+  display: flex;
+  margin-top: 103px;
+  justify-content: center;
+  .about__clients_text {
+    max-width: 50%;
+    .about__clients_head {
+      text-align: center;
+      font-size: 36px !important;
+      @include fontsForHeaders;
+    }
+  }
+  ol {
+    @include fontsForText(24px, white);
+  }
+  .about__clients_list {
+    .about__clients_elements {
+      .about__clients_elements_content {
+        @include fontsForText(24px, white);
+      }
+    }
+  }
+  .about__clients_gif {
+    margin-left: 60px;
+    width: 800px;
+    height: 600px;
+  }
+  iframe {
+    width: 100%;
+    height: 600px;
+    border-radius: 100px;
+    -webkit-box-shadow: 7px 7px 2.5px 10px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 7px 7px 2.5px 10px rgba(0, 0, 0, 0.25);
+    box-shadow: 7px 7px 2.5px 10px rgba(0, 0, 0, 0.25);
+  }
+}
+.invite__gaming {
+  margin-top: 150px;
+  display: flex;
+  align-items: center;
+  margin-left: 150px;
+  margin-bottom: 150px;
+  gap: 228px;
+  .gaming__text {
+    max-width: 900px;
+    .gaming__text_header {
+      font-size: 36px !important;
+      text-align: center;
+      @include fontsForHeaders;
+    }
+    .gaming__text_menu {
+      list-style-type: none;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+    }
+  }
+  .gaming__text_list {
+    .gaming__text_elements {
+      @include fontsForText(36px, white);
+      margin: 0;
+    }
+  }
+  .gaming__button {
+  }
+  .gaming__button_link {
+    @include fontsForText(0, white);
+    font-size: 50px;
+    display: flex;
+    align-items: center;
+    color: black;
+    justify-content: center;
+    border-radius: 100px;
+    background-color: white;
+    width: 375px;
+    height: 126px;
+  }
+  .gaming__button_link:hover {
+    cursor: pointer;
   }
 }
