--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,86 +60,67 @@
           </p>
         </div>
       </section>
-      <section>
-        <div class="miniFAQ__container">
-          <div class="container__left_text">
-            <h4 class="left_text__header">
-              Если кратко, то какие у вас преимущества?
-            </h4>
-            <ul class="left__text_list">
-              <li class="list__problems_elements">
-                <p class="problems__elements_desc">
-                  Мы предоставляем быстрый и современный хостинг для вашего
-                  времяпрепровождения. Минимальное время задержки обеспечит
-                  приятный ответ от сервера
-                </p>
-              </li>
-              <li class="list__problems_elements">
-                <p class="problems__elements_desc">
-                  Высококвалифицированная администрация проекта и разработчики,
-                  уже имеющие опыт работы с такими большими продуктами, по типу
-                  игровых серверов
-                </p>
-              </li>
-              <li class="list__problems_elements">
-                <p class="problems__elements_desc">
-                  Создатель не выкачивает деньги из аудитории, а ставит её в
-                  приоритет по действиям в сторону проекта.
-                </p>
-              </li>
-              <li class="list__problems_elements">
-                <p class="problems__elements_desc">
-                  Красивая карта, множество взаимодействий и уникальная система
-                  прокачки внутриигрового персонажа позволит окунуться в игровой
-                  процесс с головой!
-                </p>
-              </li>
-            </ul>
-          </div>
-          <div class="container__right_list">
-            <h2 class="right__list_header">Кому подойдёт наш проект?</h2>
-            <p class="right__list_main">Наш проект подойдёт следующим лицам:</p>
-            <ul class="right__list_pluses">
-              <li class="pluses__elements">
-                <p class="elements__desc">
-                  Тем, кто устал от однообразия игровых серверов
-                </p>
-              </li>
-              <li class="pluses__elements">
-                <p class="elements__desc">
-                  Тем, кто не терпит коррумпированности высшего состава
-                  администрации и создателей
-                </p>
-              </li>
-              <li class="pluses__elements">
-                <p class="elements__desc">
-                  Тем, кто хочет просто отдохнуть, без сложных RolePlay
-                  отыгровок и огромных рукописных текстов в общеигровой чат.
-                </p>
-              </li>
-            </ul>
-          </div>
+      <section class="project__about_clients">
+        <div class="about__clients_text">
+          <h2 class="about__clients_head">Какие преимущества у проекта?</h2>
+          <ol class="about__clients_list">
+            <li class="about__clients_elements">
+              <p class="about__clients_elements_content">
+                Наш проект рассчитан на игроков, а не на кошелёк создателя
+              </p>
+            </li>
+            <li class="about__clients_elements">
+              <p class="about__clients_elements_content">
+                Проект лоялен к своевольным действиям, если они не несут грубое
+                нарушение правил
+              </p>
+            </li>
+            <li class="about__clients_elements">
+              <p class="about__clients_elements_content">
+                Частые и своевременные обновления не дадут игрокам заскучать
+              </p>
+            </li>
+            <li class="about__clients_elements">
+              <p class="about__clients_elements_content">
+                Хорошо проработанная система правил не даёт запихнуть потенциал
+                в рамки;
+              </p>
+            </li>
+            <li class="about__clients_elements">
+              <p class="about__clients_elements_content">
+                У нас есть много-много печенек!
+              </p>
+            </li>
+          </ol>
         </div>
-      </section>
-      <section class="block__ad">
-        <div class="ad__left_text">
-          <h2 class="left__text_header">
-            Как понять точнее, подойдёт мне проект или нет?
-          </h2>
-          <p class="left__text_main">
-            Вы можете пройти наш тест, нажав на кнопку справа. Это не займёт
-            много времени и вы сможете быстро понять, понравится ли на проекте
-            или нет, если вы ленивый и не хотите качать наш контент сразу.
-          </p>
-        </div>
-        <div class="ad__button_for_register">
-          <h2 class="button_for_register__header">Та самая кнопка на тест!</h2>
-          <button class="button_for_register__button">
-            <a href="" class="button__link">Пройти!</a>
-          </button>
+        <div class="about__clients_gif">
+          <iframe src="/images/funny__video.gif" frameborder="0"></iframe>
         </div>
       </section>
     </div>
+    <section class="invite__gaming">
+      <div class="gaming__text">
+        <h2 class="gaming__text_header">
+          Заинтересовало? Тогда приходи к нам!
+        </h2>
+        <ul class="gaming__text_menu">
+          <li class="gaming__text_list">
+            <p class="gaming__text_elements">
+              Для старта игры тебе надо нажать на кнопку слева, либо перейти по
+              кнопке в шапке сайта!
+            </p>
+          </li>
+          <li class="gaming__text_list">
+            <p class="gaming__text_elements">
+              Не упусти свой шанс окунуться в мир Звёздных Войн!
+            </p>
+          </li>
+        </ul>
+      </div>
+      <div class="gaming__button">
+        <button class="gaming__button_link">Играть!</button>
+      </div>
+    </section>
     <script src="./scripts/parallax.js"></script>
     <script src="./scripts/index.js"></script>
   </body>
