--- a/public/styles/css/style.css
+++ b/public/styles/css/style.css
@@ -477,4 +477,88 @@ body {
 }
 .invite__gaming .gaming__button_link:hover {
   cursor: pointer;
+}
+
+.login__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 729px;
+}
+.login__container .login__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 996px;
+}
+.login__container .form__container {
+  display: flex;
+  flex-direction: column;
+}
+.login__container input:not([type=submit]) {
+  width: 845px;
+  height: 50px;
+  border-radius: 100px;
+  margin-bottom: 85px;
+  margin-top: 10px;
+  padding-left: 20px;
+  font-size: 20px;
+}
+.login__container input:not([type=password]) {
+  font-family: "SW_font", sans-serif;
+}
+.login__container input:not([type=text])::-moz-placeholder {
+  font-family: "SW_font", sans-serif;
+}
+.login__container input:not([type=text])::placeholder {
+  font-family: "SW_font", sans-serif;
+}
+.login__container #auth {
+  background-color: #008000;
+  border: none;
+  border-radius: 100px;
+  width: 439px;
+  height: 112px;
+  font-family: "SW_font", sans-serif;
+  font-size: 40px;
+  color: white;
+  transition: all 0.5s;
+}
+.login__container #auth:hover {
+  cursor: pointer;
+  background-color: white;
+  color: black;
+}
+.login__container label {
+  font-family: "SW_font", sans-serif;
+  font-size: 20px;
+  color: white;
+  margin-left: 0;
+  margin-left: 25px;
+}
+.login__container .login__variables {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin-top: 75px;
+}
+.login__container .login__variables .variables__register {
+  font-family: "SW_font", sans-serif;
+  font-size: 20px;
+  color: white;
+  margin-left: 0;
+  max-height: 23px;
+}
+.login__container .login__variables .variables__register p {
+  margin: 0;
+}
+.login__container .login__variables .variables__register a {
+  text-decoration: none;
+  transition: all 0.5s;
+}
+.login__container .login__variables .variables__register a:hover {
+  color: skyblue;
 }/*# sourceMappingURL=style.css.map */
