--- a/public/styles/css/style.css
+++ b/public/styles/css/style.css
@@ -2,12 +2,15 @@
   font-family: SW_font;
   src: url("../../fonts/SW_font.otf") format("opentype");
 }
+* {
+  box-sizing: border-box;
+}
+
 html {
   overflow-x: hidden;
 }
 
 body {
-  box-sizing: border-box;
   background-image: url(../../images/bg.jpg);
 }
 
@@ -484,12 +487,13 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 729px;
+  height: 44vw;
 }
 .login__container .login__form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 996px;
 }
 .login__container .form__container {
@@ -561,4 +565,80 @@ body {
 }
 .login__container .login__variables .variables__register a:hover {
   color: skyblue;
+}
+
+.register__container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 55vw;
+}
+.register__container .form__container_register {
+  display: flex;
+  flex-direction: column;
+}
+.register__container .form__container_register .register__buttons {
+  display: flex;
+  align-items: center;
+  align-self: center;
+  gap: 20px;
+}
+.register__container .form__container_register .register__buttons iframe {
+  width: 102px;
+  height: 100px;
+}
+.register__container .form__container_register .register__buttons input {
+  width: 378px;
+  height: 77px;
+  background-color: #008000;
+  color: white;
+  font-size: 25px;
+  border: none;
+  border-radius: 100px;
+  transition: all 0.5s;
+}
+.register__container .form__container_register .register__buttons input:hover {
+  cursor: pointer;
+  color: black;
+  background-color: white;
+}
+.register__container .form__container_register input:is([type=text], [type=email], [type=password]) {
+  width: 845px;
+  height: 50px;
+  border-radius: 100px;
+  margin-bottom: 85px;
+  margin-top: 10px;
+  padding-left: 20px;
+  font-size: 20px;
+}
+.register__container .form__container_register input:not([type=password]) {
+  font-family: "SW_font", sans-serif;
+}
+.register__container .form__container_register input:not([type=text])::-moz-placeholder {
+  font-family: "SW_font", sans-serif;
+}
+.register__container .form__container_register input:not([type=text])::placeholder {
+  font-family: "SW_font", sans-serif;
+}
+.register__container .form__container_register label {
+  font-family: "SW_font", sans-serif;
+  font-size: 20px;
+  color: white;
+  margin-left: 0;
+  margin-left: 25px;
+}
+.register__container .form__container_register .checkboxes__list {
+  list-style-type: none;
+}
+.register__container .form__container_register .checkboxes__elements {
+  display: flex;
+  align-items: center;
+  margin-bottom: 26px;
+}
+.register__container .form__container_register .checkboxes__elements input:is([type=checkbox]) {
+  width: 25px;
+  height: 25px;
+}
+.register__container .form__container_register .checkboxes__elements label {
+  margin-left: 17px;
 }/*# sourceMappingURL=style.css.map */
