DONE: аккордеон TODO: профиль и о проекте сделать серверное взаимодействие

--- a/views/QandA.ejs
+++ b/views/QandA.ejs
@@ -9,5 +9,67 @@
   </head>
   <body>
     <%- include("components/header") %>
+    <div class="faq__container">
+      <section class="faq__accord">
+        <h2 class="faq__title">
+          Вас заинтересовал какой-либо вопрос? Найдите ответ на него здесь!
+        </h2>
+        <div class="accod__container">
+          <input type="checkbox" name="accord__first" id="first" />
+          <label for="first"
+            >Как будет существовать ваш проект, если вы не нацелены на
+            деньги?</label
+          >
+          <div class="accord__body">
+            <p>
+              Наш сервер существует на добровольных пожертвованиях и на личные
+              средства заинтересованных разработчиков и создателя. Все отчёты по
+              тратам потраченных средств публикуются в нашем Дискорд сервере.
+            </p>
+          </div>
+          <input type="checkbox" name="accord_second" id="second" />
+          <label for="second">Как узнать за продвижением разработки?</label>
+          <div class="accord__body">
+            <p>
+              Все новости о разработке, новых и готовящихся обновлениях
+              регулярно публикуются в специальной ветке на Дискорд сервере.
+              Именно там можно узнать о грядущих нововведениях одним из первых.
+            </p>
+          </div>
+          <input type="checkbox" name="accord__third" id="third" />
+          <label for="third"
+            >Есть ли у вас бусти или другой сервис подписки? Что он даёт?</label
+          >
+          <div class="accord__body">
+            <p>
+              Пока что таких сервисов нет. Мы планируем ввести систему платных
+              подписок в обмен на ускорение в прокачке персонажа путём
+              увеличения получаемого опыта или внутриигровых денежных средств.
+              Пожертвования не изменяют уровень получаемого удовольствия и не
+              вызывают дисбаланса.
+            </p>
+          </div>
+          <input type="checkbox" name="accord__fourth" id="fourth" />
+          <label for="fourth"
+            >Где посмотреть дорожную карту по разработке проекта?</label
+          >
+          <div class="accord__body">
+            <p>
+              Вся дорожная карта публикуется строго в канале дневника разработки
+              на Дискорд сервере. Данное нововведение на сайте планируется в
+              ближайшее время, пока что все ресурсы уходят на внутриигровую
+              разработку.
+            </p>
+          </div>
+        </div>
+        <div class="faq__form">
+          <p class="faq__text">
+            Не нашли ответ на свой вопрос! Задайте его в дискорд или по кнопке
+            ниже!
+          </p>
+          <button class="faq__modal_open">Задать вопрос</button>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
