--- a/public/styles/css/style.css
+++ b/public/styles/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: SW_font;
   src: url("../../fonts/SW_font.otf") format("opentype");
@@ -641,4 +642,113 @@ body {
 }
 .register__container .form__container_register .checkboxes__elements label {
   margin-left: 17px;
+}
+
+.faq__container {
+  display: flex;
+  justify-content: center;
+}
+.faq__container .faq__accord {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.faq__container .faq__title {
+  font-family: "SW_font", sans-serif;
+  font-size: 24px;
+  text-transform: uppercase;
+  color: #c0b534;
+  font-size: 28px;
+}
+.faq__container .faq__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.faq__container .faq__form .faq__text {
+  font-family: "SW_font", sans-serif;
+  font-size: 20px;
+  color: white;
+  margin-left: 0;
+  font-size: 24px !important;
+}
+.faq__container .faq__form .faq__modal_open {
+  font-family: "SW_font", sans-serif;
+  font-size: 20px;
+  color: white;
+  margin-left: 0;
+  font-size: 34px !important;
+  width: 351px;
+  height: 109px;
+  border-radius: 100px;
+  border: none;
+  background-color: #008000;
+  transition: all 0.5s;
+}
+.faq__container .faq__form .faq__modal_open:hover {
+  cursor: pointer;
+  background-color: white;
+  color: black;
+}
+
+.accod__container {
+  max-width: 1557px;
+}
+.accod__container .accord__body {
+  width: 100%;
+  height: 0;
+  color: rgba(0, 0, 0, 0);
+  background-color: #bfe2ff;
+  line-height: 18px;
+  box-sizing: border-box;
+  transition: all 0.5s;
+  overflow: hidden;
+  font-family: Verdana, sans-serif;
+  font-size: 16px;
+  border-radius: 0 0 100px 100px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 10px 16px rgba(0, 0, 0, 0.2);
+}
+.accod__container .accord__body p {
+  margin: 0 0 10px;
+  padding-left: 30px;
+}
+.accod__container label {
+  cursor: pointer;
+  background-color: #337ab7;
+  display: block;
+  padding: 15px 20px;
+  width: 100%;
+  color: #bfe2ff;
+  font-weight: 300;
+  box-sizing: border-box;
+  z-index: 100;
+  font-family: Verdana, sans-serif;
+  font-size: 18px;
+  margin: 0 0 5px;
+  transition: color 0.35s;
+}
+.accod__container label:hover {
+  color: #fff;
+}
+.accod__container input {
+  display: none;
+}
+.accod__container label:before {
+  content: "❯";
+  float: right;
+}
+.accod__container input:checked + label {
+  background-color: #285f8f;
+  color: #fff;
+  box-shadow: 0 8px 26px rgba(0, 0, 0, 0.4), 0 28px 30px rgba(0, 0, 0, 0.3);
+}
+.accod__container input:checked + label:before {
+  transition: transform 0.35s;
+  transform: rotate(90deg);
+}
+.accod__container input:checked + label + .accord__body {
+  height: auto;
+  margin-top: -5px;
+  color: #000;
+  padding: 20px 30px 10px;
 }/*# sourceMappingURL=style.css.map */
