--- a/public/styles/scss/style.scss
+++ b/public/styles/scss/style.scss
@@ -523,3 +523,103 @@ body {
     }
   }
 }
+.faq__container {
+  display: flex;
+  justify-content: center;
+  .faq__accord {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .accod__container {
+    }
+  }
+  .faq__title {
+    @include fontsForHeaders;
+    font-size: 28px;
+  }
+  .faq__form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .faq__text {
+      @include fontsForText(0, white);
+      font-size: 24px !important;
+    }
+    .faq__modal_open {
+      @include fontsForText(0, white);
+      font-size: 34px !important;
+      width: 351px;
+      height: 109px;
+      border-radius: 100px;
+      border: none;
+      background-color: #008000;
+      transition: all 0.5s;
+    }
+    .faq__modal_open:hover {
+      cursor: pointer;
+      background-color: white;
+      color: black;
+    }
+  }
+}
+.accod__container {
+  max-width: 1557px;
+  .accord__body {
+    width: 100%;
+    height: 0;
+    color: rgba(0, 0, 0, 0);
+    background-color: #bfe2ff;
+    line-height: 18px;
+    box-sizing: border-box;
+    transition: all 0.5s;
+    overflow: hidden;
+    font-family: Verdana, sans-serif;
+    font-size: 16px;
+    border-radius: 0 0 100px 100px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 10px 16px rgba(0, 0, 0, 0.2);
+    p {
+      margin: 0 0 10px;
+      padding-left: 30px;
+    }
+  }
+  label {
+    cursor: pointer;
+    background-color: #337ab7;
+    display: block;
+    padding: 15px 20px;
+    width: 100%;
+    color: #bfe2ff;
+    font-weight: 300;
+    box-sizing: border-box;
+    z-index: 100;
+    font-family: Verdana, sans-serif;
+    font-size: 18px;
+    margin: 0 0 5px;
+    transition: color 0.35s;
+  }
+  label:hover {
+    color: #fff;
+  }
+  input {
+    display: none;
+  }
+  label:before {
+    content: "\276F";
+    float: right;
+  }
+  input:checked + label {
+    background-color: #285f8f;
+    color: #fff;
+    box-shadow: 0 8px 26px rgba(0, 0, 0, 0.4), 0 28px 30px rgba(0, 0, 0, 0.3);
+  }
+  input:checked + label:before {
+    transition: transform 0.35s;
+    transform: rotate(90deg);
+  }
+  input:checked + label + .accord__body {
+    height: auto;
+    margin-top: -5px;
+    color: #000;
+    padding: 20px 30px 10px;
+  }
+}
