TODO: делать профиль и посты сделать возможность обновления аватара сделать кастомную валидацию

--- a/public/styles/scss/style.scss
+++ b/public/styles/scss/style.scss
@@ -573,11 +573,12 @@ body {
     box-sizing: border-box;
     transition: all 0.5s;
     overflow: hidden;
-    font-family: Verdana, sans-serif;
+    @include fontsForText(0, black);
     font-size: 16px;
     border-radius: 0 0 100px 100px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 10px 16px rgba(0, 0, 0, 0.2);
     p {
+      @include fontsForText(0, black);
       margin: 0 0 10px;
       padding-left: 30px;
     }
@@ -592,7 +593,7 @@ body {
     font-weight: 300;
     box-sizing: border-box;
     z-index: 100;
-    font-family: Verdana, sans-serif;
+    @include fontsForText(0, black);
     font-size: 18px;
     margin: 0 0 5px;
     transition: color 0.35s;
