--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -11,21 +11,20 @@
           <a href="/" class="list__links">Главная</a>
         </li>
         <li class="menu__list">
-          <a href="/about" class="list__links">О проекте</a>
-        </li>
-        <li class="menu__list">
           <a href="/questions" class="list__links">ЧАВО</a>
         </li>
         <li class="menu__list">
           <a href="#" class="list__links">Дискорд</a>
         </li>
+        <% if (!locals.user) { %>
         <li class="menu__list">
-          <% if (locals.user) { %>
-          <a href="/profile" class="list__links">Профиль</a>
-          <% } else { %>
-          <a href="/login" class="list__links">Войти</a>
-          <% } %>
+          <a href="/login" class="list__links">Вход</a>
         </li>
+        <% } else { %>
+        <li class="menu__list">
+          <a href="/profile" class="list__links">Профиль</a>
+        </li>
+        <% } %>
       </ul>
     </nav>
     <div id="header__container_button">
