--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
   <body>
     <%- include("components/header") %>
     <div class="login__container">
-      <form action="/login/auth" method="post" class="login__form">
+      <form action="/login" method="post" class="login__form">
         <div class="form__container">
           <label for="login">Введите логин</label>
           <input
