--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,7 +13,7 @@
   <body>
     <%- include("components/header") %>
     <div class="register__container">
-      <form action="/register/auth" class="register__form">
+      <form action="/register" method="POST" class="register__form">
         <div class="form__container_register">
           <label for="email">Введите почту</label>
           <input type="email" name="email" id="email" />
