--- a/public/styles/css/style.css
+++ b/public/styles/css/style.css
@@ -703,12 +703,19 @@ body {
   box-sizing: border-box;
   transition: all 0.5s;
   overflow: hidden;
-  font-family: Verdana, sans-serif;
+  font-family: "SW_font", sans-serif;
+  font-size: 20px;
+  color: black;
+  margin-left: 0;
   font-size: 16px;
   border-radius: 0 0 100px 100px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 10px 16px rgba(0, 0, 0, 0.2);
 }
 .accod__container .accord__body p {
+  font-family: "SW_font", sans-serif;
+  font-size: 20px;
+  color: black;
+  margin-left: 0;
   margin: 0 0 10px;
   padding-left: 30px;
 }
@@ -722,7 +729,10 @@ body {
   font-weight: 300;
   box-sizing: border-box;
   z-index: 100;
-  font-family: Verdana, sans-serif;
+  font-family: "SW_font", sans-serif;
+  font-size: 20px;
+  color: black;
+  margin-left: 0;
   font-size: 18px;
   margin: 0 0 5px;
   transition: color 0.35s;
