--- a/public/styles/scss/style.scss
+++ b/public/styles/scss/style.scss
@@ -624,3 +624,156 @@ body {
     padding: 20px 30px 10px;
   }
 }
+
+.profile__container {
+  display: flex;
+  max-width: 1745px;
+  margin-top: 50px !important;
+  margin: 0 auto;
+  position: relative;
+  .profile__avatar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 55px;
+    position: relative;
+    .fa-pencil {
+      position: absolute;
+      opacity: 0;
+    }
+    .avatar {
+      border-radius: 100px;
+      max-width: 550px;
+      max-height: 550px;
+      background-color: black;
+      transition: all 0.3s;
+    }
+    .avatar:hover {
+      cursor: pointer;
+      background: rgba(0, 0, 0, 0.5);
+      opacity: 0.5;
+    }
+  }
+  .profile__text {
+    .profile__name {
+      @include fontsForText(0, white);
+      font-size: 36px;
+    }
+    .profile__email {
+      @include fontsForText(0, white);
+      font-size: 36px;
+    }
+    .profile__desc {
+      position: absolute;
+      bottom: 0;
+      width: 1140px;
+      .desc__text {
+        @include fontsForText(0, white);
+        font-size: 36px;
+      }
+      .desc__buttons {
+        display: flex;
+        justify-content: space-between;
+        @include fontsForText(0, white);
+        font-size: 24px;
+        .buttons__alt {
+          margin: 0;
+        }
+        .buttons__change {
+          max-height: 27.6px;
+        }
+      }
+    }
+  }
+}
+.posts__head {
+  @include fontsForText(0, white);
+  margin-left: 100px;
+  margin-top: 260px;
+}
+.posts__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .post__container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: #d9d9d9;
+    border-radius: 100px;
+    height: 279px;
+    width: 1752px;
+    .post__head {
+      font-size: 36px;
+      @include fontsForHeaders;
+    }
+    .post__text {
+      @include fontsForText(0, black);
+      font-size: 26px;
+    }
+  }
+  .post__create {
+    margin: 0 auto;
+    button {
+      border-radius: 100px;
+      border: none;
+      background-color: #008000;
+      width: 400px;
+      height: 75px;
+      @include fontsForText(0, white);
+      margin-top: 50px;
+      margin-bottom: 50px;
+      transition: all 0.4s;
+    }
+    button:hover {
+      background-color: #008000bb;
+      cursor: pointer;
+    }
+  }
+}
+.create__desc {
+  @include fontsForHeaders;
+  margin-bottom: 40px;
+}
+.post__form_container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 75px;
+  .post__form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 500px;
+    label {
+      @include fontsForText(0, white);
+      margin-left: 19px;
+    }
+    #title {
+      @include fontsForText(0, black);
+      height: 50px;
+      border-radius: 100px;
+      padding-left: 15px;
+    }
+    #text {
+    }
+    .post__textarea {
+      @include fontsForText(0, black);
+      border-radius: 100px;
+      padding-left: 15px;
+      padding-top: 15px;
+    }
+    .post__create_button {
+      height: 75px;
+      border-radius: 100px;
+      background-color: #008000;
+      @include fontsForText(0, white);
+      border: none;
+      transition: all 0.4s;
+    }
+    .post__create_button:hover {
+      cursor: pointer;
+      background-color: #008000bb;
+    }
+  }
+}
