--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -27,7 +27,7 @@
           </p>
           <div class="desc__buttons">
             <p class="buttons__alt">(максимум 255 символов)</p>
-            <a href="" class="buttons__change">Изменить</a>
+            <a href="/profile/changeStatus" class="buttons__change">Изменить</a>
           </div>
         </div>
       </div>
