--- a/public/styles/css/style.css
+++ b/public/styles/css/style.css
@@ -647,6 +647,7 @@ body {
 .faq__container {
   display: flex;
   justify-content: center;
+  margin-top: 100px;
 }
 .faq__container .faq__accord {
   display: flex;
@@ -848,6 +849,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 50px;
 }
 .posts__container .post__container {
   display: flex;
@@ -885,7 +887,6 @@ body {
   font-size: 20px;
   color: white;
   margin-left: 0;
-  margin-top: 50px;
   margin-bottom: 50px;
   transition: all 0.4s;
 }
@@ -953,4 +954,89 @@ body {
 .post__form_container .post__form .post__create_button:hover {
   cursor: pointer;
   background-color: rgba(0, 128, 0, 0.7333333333);
+}
+
+.change__status_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 210px;
+}
+.change__status_container .status__header {
+  font-size: 36px;
+  font-family: "SW_font", sans-serif;
+  font-size: 24px;
+  text-transform: uppercase;
+  color: #c0b534;
+  margin-bottom: 50px;
+}
+.change__status_container .status__form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 500px;
+}
+.change__status_container .status__form label {
+  font-family: "SW_font", sans-serif;
+  font-size: 20px;
+  color: white;
+  margin-left: 0;
+  margin-left: 19px;
+}
+.change__status_container .status__form input:not([type=submit]) {
+  font-family: "SW_font", sans-serif;
+  font-size: 20px;
+  color: black;
+  margin-left: 0;
+  height: 50px;
+  border-radius: 100px;
+  padding-left: 15px;
+}
+.change__status_container .status__form input[type=submit] {
+  height: 75px;
+  border-radius: 100px;
+  background-color: #008000;
+  font-family: "SW_font", sans-serif;
+  font-size: 20px;
+  color: white;
+  margin-left: 0;
+  border: none;
+  transition: all 0.4s;
+}
+.change__status_container .status__form input[type=submit]:hover {
+  background-color: rgba(0, 128, 0, 0.7333333333);
+  cursor: pointer;
+}
+
+@media (max-width: 600px) {
+  #header__content {
+    flex-direction: column;
+    width: 100vw;
+  }
+  #header__content #header__left_content {
+    width: 100%;
+  }
+  #header__content #scene {
+    display: none;
+  }
+  .rain-container .project__info #info__media {
+    display: none;
+  }
+  .rain-container .project__info .info__text {
+    width: 100%;
+  }
+  .project__about_clients .about__clients_gif {
+    display: none;
+  }
+  .project__about_clients .about__clients_text {
+    width: 100%;
+    max-width: 100%;
+  }
+  .invite__gaming {
+    width: 100%;
+    margin-top: 25px;
+    margin-left: 10px;
+    gap: 40px;
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=style.css.map */
