--- a/views/index.ejs
+++ b/views/index.ejs
@@ -118,7 +118,9 @@
         </ul>
       </div>
       <div class="gaming__button">
-        <button class="gaming__button_link">Играть!</button>
+        <a href="https://discord.gg/ta8PdGctHM">
+          <button class="gaming__button_link">Играть!</button>
+        </a>
       </div>
     </section>
     <script src="./scripts/parallax.js"></script>
