--- a/views/register.ejs
+++ b/views/register.ejs
@@ -45,12 +45,13 @@
             </li>
           </ul>
           <div class="register__buttons">
-            <iframe src="/images/IMG_0808.gif" frameborder="0"></iframe>
+            <img src="/images/IMG_0808.gif" frameborder="0" />
             <input type="submit" value="Зарегистрироваться!" />
-            <iframe src="/images/IMG_0808.gif" frameborder="0"></iframe>
+            <img src="/images/IMG_0808.gif" frameborder="0" />
           </div>
         </div>
       </form>
     </div>
+    <script src="/scripts/validation.js"></script>
   </body>
 </html>
