--- a/public/styles/css/style.css
+++ b/public/styles/css/style.css
@@ -13,6 +13,22 @@ html {
 
 body {
   background-image: url(../../images/bg.jpg);
+  height: 100vh;
+}
+
+.burger {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 30px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.burger__line {
+  width: 100%;
+  height: 3px;
+  background-color: black;
 }
 
 #header {
@@ -37,6 +53,7 @@ body {
   display: flex;
   margin: 0;
   padding: 0;
+  flex-wrap: wrap;
   max-height: 100%;
 }
 
@@ -428,7 +445,7 @@ body {
   width: 100%;
   height: 600px;
   border-radius: 100px;
-  box-shadow: 7px 7px 2.5px 10px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 7px 15px 7px rgba(255, 255, 255, 0.25);
 }
 
 .invite__gaming {
@@ -436,7 +453,7 @@ body {
   display: flex;
   align-items: center;
   margin-left: 150px;
-  margin-bottom: 150px;
+  padding-bottom: 150px;
   gap: 228px;
 }
 .invite__gaming .gaming__text {
@@ -464,6 +481,10 @@ body {
   margin-left: 36px;
   margin: 0;
 }
+.invite__gaming .gaming__button a {
+  color: black;
+  text-decoration: none;
+}
 .invite__gaming .gaming__button_link {
   font-family: "SW_font", sans-serif;
   font-size: 20px;
@@ -478,9 +499,14 @@ body {
   background-color: white;
   width: 375px;
   height: 126px;
+  transition: all 0.3s;
 }
 .invite__gaming .gaming__button_link:hover {
   cursor: pointer;
+  background-color: grey;
+  color: white;
+  border: none;
+  box-shadow: 0px 0px 51px -6px rgb(255, 255, 255);
 }
 
 .login__container {
@@ -584,7 +610,7 @@ body {
   align-self: center;
   gap: 20px;
 }
-.register__container .form__container_register .register__buttons iframe {
+.register__container .form__container_register .register__buttons img {
   width: 102px;
   height: 100px;
 }
@@ -653,6 +679,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.faq__container .faq__accord .accod__container .accord__body {
+  margin-bottom: 25px;
 }
 .faq__container .faq__title {
   font-family: "SW_font", sans-serif;
@@ -1038,5 +1067,14 @@ body {
     margin-left: 10px;
     gap: 40px;
     flex-direction: column;
+  }
+  .faq__container .faq__accord .faq__title {
+    text-align: center !important;
+  }
+  .faq__container .faq__form .faq__text {
+    text-align: center;
+  }
+  .header__container_button {
+    display: none;
   }
 }/*# sourceMappingURL=style.css.map */
