--- a/public/styles/scss/style.scss
+++ b/public/styles/scss/style.scss
@@ -12,6 +12,22 @@ html {
 }
 body {
   background-image: url(../../images/bg.jpg);
+  height: 100vh;
+}
+
+.burger {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 30px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.burger__line {
+  width: 100%;
+  height: 3px;
+  background-color: black;
 }
 
 #header {
@@ -35,6 +51,7 @@ body {
   list-style-type: none;
   @include dislplays(flex);
   @include deleteStandartMargins;
+  flex-wrap: wrap;
   max-height: 100%;
 }
 
@@ -325,9 +342,9 @@ body {
     width: 100%;
     height: 600px;
     border-radius: 100px;
-    -webkit-box-shadow: 7px 7px 2.5px 10px rgba(0, 0, 0, 0.25);
-    -moz-box-shadow: 7px 7px 2.5px 10px rgba(0, 0, 0, 0.25);
-    box-shadow: 7px 7px 2.5px 10px rgba(0, 0, 0, 0.25);
+    -webkit-box-shadow: 7px 7px 15px 10px rgba(255, 255, 255, 0.25);
+    -moz-box-shadow: 7px 7px 15px 10px rgba(255, 255, 255, 0.25);
+    box-shadow: 0px 7px 15px 7px rgba(255, 255, 255, 0.25);
   }
 }
 .invite__gaming {
@@ -335,7 +352,7 @@ body {
   display: flex;
   align-items: center;
   margin-left: 150px;
-  margin-bottom: 150px;
+  padding-bottom: 150px;
   gap: 228px;
   .gaming__text {
     max-width: 900px;
@@ -359,6 +376,10 @@ body {
     }
   }
   .gaming__button {
+    a {
+      color: black;
+      text-decoration: none;
+    }
   }
   .gaming__button_link {
     @include fontsForText(0, white);
@@ -371,9 +392,16 @@ body {
     background-color: white;
     width: 375px;
     height: 126px;
+    transition: all 0.3s;
   }
   .gaming__button_link:hover {
     cursor: pointer;
+    background-color: grey;
+    color: white;
+    border: none;
+    -webkit-box-shadow: 0px 0px 51px -6px rgba(255, 255, 255, 1);
+    -moz-box-shadow: 0px 0px 51px -6px rgba(255, 255, 255, 1);
+    box-shadow: 0px 0px 51px -6px rgba(255, 255, 255, 1);
   }
 }
 
@@ -467,7 +495,7 @@ body {
       align-items: center;
       align-self: center;
       gap: 20px;
-      iframe {
+      img {
         width: 102px;
         height: 100px;
       }
@@ -532,6 +560,9 @@ body {
     flex-direction: column;
     align-items: center;
     .accod__container {
+      .accord__body {
+        margin-bottom: 25px;
+      }
     }
   }
   .faq__title {
@@ -853,5 +884,18 @@ body {
     margin-left: 10px;
     gap: 40px;
     flex-direction: column;
+  }
+  .faq__container {
+    .faq__accord {
+      .faq__title {
+        text-align: center !important;
+      }
+    }
+  }
+  .faq__container .faq__form .faq__text {
+    text-align: center;
+  }
+  .header__container_button {
+    display: none;
   }
 }
